deployments/client_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ctf-env-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ctf-env-client
  template:
    metadata:
      labels:
        app: ctf-env-client
    spec:
      containers:
      - name: ctf-env-client
        image: jereej/ctfenvironment-client:latest
        ports:
        - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: ctf-env-client-service
spec:
  selector:
    app: ctf-env-client
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5173
    nodePort: 30517
