deployments/gateway_implementation.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ctf-public-gw
spec:
  gatewayClassName: traefik
  listeners:
  - protocol: HTTP
    port: 5173  # same port where client is hosted
    name: client-listener
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: client-route
spec:
  parentRefs:
  - name: ctf-public-gw
  rules:
  - backendRefs:
    - name: ctf-env-client-service
      port: 80
